# zoo-vox-rosetta-engine

./: .flake8  .gitignore  BIOMAE_LEARNED_EMBEDDINGS.md  CHANGELOG.md  CLAUDE.md  CONTINUOUS_MANIFOLD_TDD_v1.1.md  CONTRIBUTING.md  DDSP_JETSON_DEPLOYMENT.md  DDSP_NEURAL_DECODER_PLAN.md  DUAL_STREAM_IMPLEMENTATION.md  ENHANCED_FIELD_DEPLOYMENT_GUIDE.md  ETHOLOGICAL_VALIDATION_PROTOCOL.md  LEVEL25_SPATIAL_SOCIAL_NETWORK_INTEGRATION.md  LICENSE  MANIFOLD_INTEGRATION_PLAN.md  METADATA_SYNTHESIZER_MIGRATION.md  PERSONA_INVARIANTS_SUMMARY.md  POST_FILTER_TRAINING.md  README.md  README2.md  RUST_MIGRATION_PROGRESS.md  SELF_SUPERVISED_PREDICTIVE_BOUNDARY_DETECTION.md  Should Move to Rust (Execution Laye.txt  TEACHER_STUDENT_PIPELINE.md  USAGE_GUIDE.md  __init__.py  cleanup_technical_architecture.py  compositional_validation.py  consolidate_tests.py  create_marmoset_phrase_level_corpus.rs  data_models.py  features.md  harmonic_affirmation.py  interspecies_communication_analysis.md  justfile  presentation_video.py  pyproject.toml  python_rust_integration_gaps.md  ruff.toml  scientific.txt  (+1 more)
realtime/: .gitignore  Cargo.toml  GRANULAR_SYNTHESIS_FINDINGS.md  MICROHARMONIC_ENHANCEMENT_SUMMARY.md  README.md  __init__.py  action_publisher.py  adaptive_context_switcher.py  adaptive_resonance.py  bio_acoustic_agent.py  bio_acoustic_turing_test.py  cognitive_interaction_engine.py  cognitive_layer.py  config_client.py  context_agent.py  context_aware_synthesis.py  context_classifier.py  create_ascending_sentences_demo.py  data_logging.py  ddsp_agent.py  deep_reinforcement_learning.py  demo_bio_acoustic_turing_test.py  demo_threshold_test.py  dual_path_analyzer.py  dual_stream_ipc.py  enhanced_system.py  error_handling.py  extract_real_micro_dynamics.py  feature_subscriber.py  final_marmoset_sentences_demo.py  final_synthesis_demo.py  granular_synthesis_validation.py  interaction_agent.py  jetson_agent.py  level25_interaction_agent.py  metadata_synthesizer.py  micro_dynamics_features.py  model_quantization.py  online_phrase_discovery_agent.py  parallel_extraction_optimized.py  (+25 more)
realtime/tests/: __init__.py
technical_architecture/: .gitignore  ATOMIC_PHRASE_ANALYSIS.md  ATOMIC_PHRASE_COMPLETION_REPORT.md  BAT_ANALYSIS_INTERPRETATION.md  CONTRIBUTING.md  CORPUS_ANALYSIS_SUMMARY.md  Cargo.toml  ETHOLOGICAL_VALIDATION_PROTOCOL.md  FINAL_ANALYSIS_REPORT.md  FULL_BAT_MINIBATCH_ANALYSIS_REPORT.md  FULL_MARMOSET_MINIBATCH_ANALYSIS_REPORT.md  HDBSCAN_OPTIMIZATION_ANALYSIS.md  LEVEL25_FIELD_DEPLOYMENT.md  LICENSE  PHASE3_COMPLETION_REPORT.md  PHASE3_PARALLEL_EXTRACTION_PLAN.md  README.md  REAL_MARMOSET_DATASET_REPORT.md  TDD_PLAN_FIELD_FEATURES.md  TDD_PLAN_PRODUCTION_FEATURES.md  bat_phase2_context_analysis.py  bat_phase2_final_report.md  bat_phase2_linguistic_analysis.py  bat_phase3_acoustic_mapping.py  bat_phase3_final_report.md  bat_phase4_temporal_analysis.py  bat_phase5_emitter_analysis.py  bat_rfe_analysis.py  bat_spectrogram_comparator.py  clippy.toml  final_comparison.md  learned_weights.json  random_forest_model.json  rustfmt.toml  taxonomy_gatekeeper_rf.json  test_single.raw  test_single_manifest.json
technical_architecture/complete_analysis/: egyptian_bat_complete.json  marmoset_complete.json  marmoset_graded_analysis.json  marmoset_grading_score.json  marmoset_phrase_discovery.json
technical_architecture/deployment/: README.md  cognitive_agent_main.py  python-cognitive-agent-with-self-heal.service  python-cognitive-agent.service  python_heartbeat_client.py  rust-field-engine.service
technical_architecture/docs/: ALGORITHMS_PARALLEL_EXTRACTION.md  ARCHIVAL_PLAN.md  COMPARISON_GRAIN_VS_FILE_EXTRACTION.md  FIVE_STAGE_SYNTHESIS_PIPELINE.md  PUBLICATION_SYNTHESIS_PIPELINE.md  acoustic_detection_validation_summary.md  acoustic_specialist_rf_methodology.md  bat_corpus_analysis_from_cache.md  classification_tasks.md  closed_loop_agent_protocol.md  detection_pipeline_methodology.md  ensemble_eval_summary.md  neural_boundary_detector.md  pam_pipeline_guide.md  semantic_reconstruction_pipeline.md  synthesis_explanation.md  tdd_plan_acoustic_detection_summary.md
technical_architecture/dynamic_phrase_analysis/: dolphin_dynamic_phrases.json  egyptian_bat_dynamic_phrases.json  marmoset_dynamic_phrases.json  zebra_finch_dynamic_phrases.json
technical_architecture/examples/: analyze_social_graph.rs  bat_112d_extraction.rs  bat_112d_extraction_no_cluster.rs  bat_112d_extraction_resume.rs  bat_acoustic_validation.rs  bat_ase_mining.rs  bat_cache_features.rs  bat_channel_cache.rs  bat_context_decoded_analysis.rs  bat_corpus_analysis_from_cache.rs  bat_cross_context_syntax.rs  bat_feature_selection_analysis.rs  bat_fm_cache.rs  bat_full_cache.rs  bat_internal_syntax_analysis.rs  bat_mine_from_cache.rs  bat_nbd_cache.rs  bat_nbd_cache_level3.rs  bat_nbd_mine.rs  bat_nbd_motif_mining.rs  bat_normalize_cache.rs  bat_parallel_cache.rs  bat_perplexity_analysis.rs  bat_perplexity_comparison.rs  bat_pitch_matching.rs  bat_rate_context_analysis.rs  bat_recluster_ward.rs  bat_syntax_discovery.rs  bat_within_call_context_analysis.rs  bat_within_call_phrase_discovery.rs  bat_within_call_postprocess.rs  bat_within_vocalization_analysis.rs  bat_within_vocalization_from_p0.rs  bat_within_vocalization_syntax.rs  batch_cluster_bat.rs  beans_30d_analysis.rs  beans_45d_acoustic_similarity_benchmark.rs  beans_45d_assessment.rs  beans_45d_weighted_benchmark.rs  beans_45d_zero_shot_benchmark.rs  (+133 more)
technical_architecture/human_guided_results/: bat_semantic_dictionary.json  bat_type_centroids.json
technical_architecture/multi_species_nbd_results/: all_species_analysis.json  syntax_analysis.json
technical_architecture/rosetta_synthesis_library/: library_manifest.json
technical_architecture/scripts/: add_features_to_manifest.py  analyze_feature_variance.py  beans_create_manifest.py  beans_create_manifest_fast.py  beans_fetch.py  build_beans_gallery.py  build_reference_gallery.py  convert_marmoset_flac_to_wav.py  convert_rf_to_json.py  denoise_beans_detection.py  eval_ensemble.py  eval_hierarchical_veto.py  eval_nn_lightning.py  (+14 more)
(+651 files in other folders)
