[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoo-vox-rosetta-engine"
version = "1.0.0"
description = "Zoo Vox Rosetta Engine - Universal Rosetta Stone Methodology"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC-BY-ND 4.0"}
authors = [
    {name = "Sheel Morjaria", email = "sheelmorjaria@gmail.com"}
]
keywords = ["bioacoustics", "animal-communication", "vocalization-analysis", "rosetta-stone", "zoo-vox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "soundfile>=0.10.0",
    "librosa>=0.8.0",
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "psutil>=5.9.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
]
vision = [
    "opencv-python>=4.5.0",
    "mediapipe>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/sheelmorjaria/animal-vocalization-analysis"
Repository = "https://github.com/sheelmorjaria/animal-vocalization-analysis"

[tool.setuptools]
packages = [
    "animal_vocalization_analysis",
    "analysis",
    "analysis.rosetta_stone",
    "cognitive_intelligence",
    "data_import",
    "query_interface",
    "semiotics",
    "realtime",
    "tests",
    "utils",
]

[tool.setuptools.package-dir]
animal_vocalization_analysis = "."

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async"
]
ignore = [
    "tests/archive",
    "tests/archive_experimental",
]
