[package]
name = "technical_architecture"
version = "0.1.0"
edition = "2021"
authors = ["Field Deployment Team <team@field-deployment.example.com>"]
description = "Rust execution layer for animal vocalization analysis system"
license = "CC BY-ND 4.0"

[lib]
name = "technical_architecture"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "sync", "rt-multi-thread"] }
# ONNX Runtime for ML inference
tract-onnx = "0.21"
# Numerical computing
ndarray = { version = "0.15", features = ["rayon"] }
num_cpus = "1.16"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# UUID generation
uuid = { version = "1.0", features = ["v4"] }
# Logging
log = "0.4"
env_logger = "0.10"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Hardware access
sysinfo = "0.30"
# Atomic operations
crossbeam = "0.8"
parking_lot = "0.12"
# ZeroMQ for inter-process communication
zmq = "0.10"
# Random number generation (for TDD testing)
rand = "0.8"
# Python bindings (optional)
pyo3 = { version = "0.19", features = ["extension-module", "chrono"], optional = true }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"], optional = true }

[features]
default = []
python-bindings = ["pyo3", "pyo3-asyncio"]
gpu-acceleration = []
fpga-integration = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[package.metadata.maturin]
name = "technical_architecture._rust"  # Python module name
