[package]
name = "technical_architecture"
version = "0.1.0"
edition = "2021"
authors = ["Field Deployment Team <team@field-deployment.example.com>"]
description = "Rust execution layer for animal vocalization analysis system"
license = "CC BY-ND 4.0"

[lib]
name = "technical_architecture"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "sync", "rt-multi-thread"] }
# ONNX Runtime for ML inference
tract-onnx = "0.21"
# Numerical computing
ndarray = { version = "0.15", features = ["rayon"] }
num_cpus = "1.16"
# Parallel processing (Phase 3: Parallel Extraction)
rayon = "1.8"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
# CSV parsing for annotations
csv = "1.3"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# UUID generation
uuid = { version = "1.0", features = ["v4"] }
# Logging
log = "0.4"
env_logger = "0.10"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Hardware access
sysinfo = "0.30"
# Atomic operations
crossbeam = "0.8"
parking_lot = "0.12"
# LRU Cache for audio buffer caching
lru = "0.12"
# ZeroMQ for inter-process communication
zmq = "0.10"
# Random number generation (for TDD testing)
rand = "0.8"
# FFT for Zoo Vox Rosetta 2.0 feature extraction
rustfft = "6.2"
# HNSW for Approximate Nearest Neighbors (HDBSCAN optimization)
hnsw_rs = "0.3"
# CSV and data processing (Phase 3: Parallel Extraction)
polars = { version = "0.36", features = ["lazy"], optional = true }
# Clustering algorithms (Phase 3: Parallel Extraction)
linfa = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }
linfa-preprocessing = { version = "0.7", optional = true }
linfa-nn = { version = "0.7", optional = true }
# Audio loading and resampling (Phase 3: Parallel Extraction)
# hound is required by audio_segmenter for WAV export in synthesis pipeline
# Kept as required dependency since synthesis pipeline needs WAV export
hound = { version = "3.5" }
rubato = { version = "0.14", optional = true }
# Symphonia - modern multi-format audio decoder (supports FLAC, MP3, AAC, OGG, etc.)
# Note: Use hound for WAV (faster, simpler) and symphonia for other formats
symphonia = { version = "0.5", features = ["flac", "mp3", "aac", "ogg", "isomp4"], optional = true }
# Directory walking for file discovery
walkdir = "2.4"
# Home directory discovery
dirs = "5.0"
# Zstd compression for bundle serialization
zstd = "0.13"
# Scientific computing extensions (Phase 3: Parallel Extraction)
ndarray-stats = "0.5"
ndarray-linalg = { version = "0.16", optional = true }
# Python bindings (optional)
pyo3 = { version = "0.19", features = ["extension-module", "chrono"], optional = true }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"], optional = true }
numpy = { version = "0.19", optional = true }

# PyTorch/libtorch bindings for GPU neural network training (optional)
# Requires LIBTORCH environment variable to be set
tch = { version = "0.15", optional = true }

[features]
default = ["hound", "symphonia"]
# hound is always available (required for WAV export in synthesis)
hound = []
python-bindings = ["pyo3", "pyo3-asyncio", "numpy"]
gpu-acceleration = []
gpu-training = ["tch"]  # PyTorch-based NN training
fpga-integration = []
# Phase 3: Parallel Extraction dependencies
parallel-extraction = ["polars", "linfa", "linfa-clustering", "linfa-preprocessing", "linfa-nn", "rubato", "symphonia", "ndarray-linalg"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[package.metadata.maturin]
name = "technical_architecture._rust"  # Python module name

[dev-dependencies]
tempfile = "3.8"
